<resources>
	<string name="app_name">slide2</string>
	<string name="action_settings">Settings</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="donate">Donate</string>
	<string name="amount">Amount</string>

	<string name="hello_world">Hello World</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="paypal">PayPal</string>
	<string name="direct">Direct</string>
</resources>