<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".FirstFragment">


	<TextView
		android:id="@+id/textview_hw"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="508dp"
		android:text="@string/hello_world"
		app:layout_constraintBottom_toTopOf="@id/button_next"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.047"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.656" />

	<Button
		android:id="@+id/button_next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="60dp"
		android:text="@string/donate"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.132"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textView_amount"
		android:layout_width="80dp"
		android:layout_height="40dp"
		android:layout_marginStart="41dp"
		android:layout_marginTop="446dp"
		android:layout_marginBottom="22dp"
		android:text="@string/amount"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/button_next"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview_hw" />

	<SeekBar
		android:id="@+id/seekBar"
		android:layout_width="345dp"
		android:layout_height="21dp"
		android:layout_marginBottom="80dp"
		app:layout_constraintBottom_toTopOf="@+id/textView_amount"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<RadioGroup
		android:layout_width="193dp"
		android:layout_height="108dp"
		android:layout_marginBottom="120dp"
		app:layout_constraintBottom_toTopOf="@+id/seekBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.252"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview_hw">

		<RadioButton
			android:id="@+id/radioButton_PayPal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/paypal" />

		<RadioButton
			android:id="@+id/radioButton_Direct"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/direct" />
	</RadioGroup>

	<androidx.recyclerview.widget.RecyclerView
		android:layout_width="101dp"
		android:layout_height="114dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.941"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.429" />

</androidx.constraintlayout.widget.ConstraintLayout>


